# iotgateway

./: CMakeLists.txt  main.cpp  vcpkg.json
src/: DataBuffer.cpp  DataBuffer.h  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  Group.cpp  Group.h  JsonConfig.cpp  JsonConfig.h  Logger.cpp  Logger.h  ModbusDevice.cpp  ModbusDevice.h  ModbusGroup.cpp  ModbusGroup.h  ModbusVariable.cpp  ModbusVariable.h  OpcdaDevice.cpp  OpcdaDevice.h  OpcdaGroup.cpp  OpcdaGroup.h  OpcdaVariable.cpp  OpcdaVariable.h  OpcuaDevice.cpp  OpcuaDevice.h  ThreadPool.cpp  ThreadPool.h  ThreadPool.inl  TimerScheduler.cpp  TimerScheduler.h  Variable.cpp  Variable.h
